fix: add 'nowrap' that meta section won't break

--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,7 @@ form {
 
     & .address__title {
         text-transform: capitalize;
+        text-wrap: nowrap;
     }
 
     & .current__desc {
